libs/modkit/macros/tests/ui/fail/lifecycle_await_ready_wrong_type.stderr
error: await_ready must be a bool literal (true/false) or a bare flag
 --> tests/ui/fail/lifecycle_await_ready_wrong_type.rs:3:74
  |
3 | #[module(name="x", caps=[stateful], lifecycle(entry="serve", await_ready="true"))]
  |                                                                          ^^^^^^
